@@ -113,7 +113,7 @@ public:
    *
    * @param target The form into which the clipboard owner should convert the selection.
    *
-   * @return A GtkSelectionData object, which will be invalid if retrieving the given target failed. 
+   * @return A SelectionData object, which will be invalid if retrieving the given target failed. 
    **/
   SelectionData wait_for_contents(const Glib::ustring& target) const;
   _IGNORE(gtk_clipboard_wait_for_contents)
