@@ -151,7 +151,7 @@ public:
 
   _WRAP_METHOD(void resize_children(), gtk_container_resize_children)
   
-  _WRAP_METHOD(GType child_type(), gtk_container_child_type)
+  _WRAP_METHOD(GType child_type() const, gtk_container_child_type)
 
   // Ignore functions such as gtk_container_class_install_child_property(),  which I think are for themes, like the GtkWidget style properties.
   _IGNORE(gtk_container_class_install_child_property, gtk_container_class_find_child_property, gtk_container_class_list_child_properties,
@@ -163,7 +163,7 @@ public:
   _WRAP_SIGNAL(void check_resize(), "check_resize")
   _WRAP_SIGNAL(void set_focus_child(Widget* widget), "set_focus_child")
 
-  _WRAP_VFUNC(GtkType child_type(), child_type)
+  _WRAP_VFUNC(GtkType child_type() const, child_type)
   _WRAP_VFUNC(void forall(gboolean include_internals, GtkCallback callback, gpointer callback_data), forall)
   _WRAP_VFUNC(char* composite_name(GtkWidget* child), composite_name)
   _WRAP_VFUNC(void set_child_property(GtkWidget* child, guint property_id, const GValue* value, GParamSpec* pspec), set_child_property)
