@@ -56,9 +56,8 @@ public:
   _MEMBER_GET_PTR(keys_list,keys_list,Table*,GtkWidget*)
   _MEMBER_GET_PTR(keys_box,keys_listbox,ScrolledWindow*,GtkWidget*)
 
-  //TODO: Use Gdk::Device
-  _WRAP_SIGNAL(void enable_device(GdkDevice* device), "enable_device")
-  _WRAP_SIGNAL(void disable_device(GdkDevice* device), "disable_device")
+  _WRAP_SIGNAL(void enable_device(const Glib::RefPtr<Gdk::Device>& device), "enable_device")
+  _WRAP_SIGNAL(void disable_device(const Glib::RefPtr<Gdk::Device>& device), "disable_device")
 };
 
 } /* namespace Gtk */
