@@ -45,7 +45,7 @@ class TreeDragSource : public Glib::Interface
 public:
   _WRAP_METHOD(bool row_draggable(const TreeModel::Path& path) const, gtk_tree_drag_source_row_draggable)
 
-  _WRAP_METHOD(bool drag_data_get(const TreeModel::Path& path, SelectionData& selection_data), gtk_tree_drag_source_drag_data_get)
+  _WRAP_METHOD(bool drag_data_get(const TreeModel::Path& path, GtkSelectionData* selection_data), gtk_tree_drag_source_drag_data_get)
                
   _WRAP_METHOD(bool drag_data_delete(const TreeModel::Path& path), gtk_tree_drag_source_drag_data_delete)
 
