@@ -146,7 +146,7 @@ public:
    * you can assume that selection data of type "GTK_TREE_MODEL_ROW" is
    * from the current process. 
    *
-   * @selection_data: a #GtkSelectionData
+   * @selection_data: a #SelectionData
    * @tree_model: a Gtk::TreeModel
    * @path: a row in tree_model
    *
@@ -162,7 +162,7 @@ public:
    * Sets selection data of target type "GTK_TREE_MODEL_ROW". Normally used
    * in a drag_data_get signal handler.
    *
-   * @param selection_data some #GtkSelectionData
+   * @param selection_data some #SelectionData
    * @param tree_model: a Gtk::TreeModel
    *
    * @return true if the selection_data had the proper target type to allow us to set a tree row
