@@ -24,6 +24,7 @@
 #include <gtkmm/settings.h>
 #include <gtkmm/style.h>
 #include <gtkmm/container.h>
+#include <gtkmm/selectiondata_private.h>
 #include <gtk/gtkdnd.h>
 #include <gtk/gtkselection.h>
 #include <gtk/gtkwidget.h>
