@@ -496,9 +496,9 @@ dnl
   _WRAP_SIGNAL(bool no_expose_event(GdkEventAny* event), "no_expose_event")
   _WRAP_SIGNAL(bool window_state_event(GdkEventWindowState* event), "window_state_event")
 
-  //TODO: Use: Gtk::Selection:
+  //TODO: Use: SelectionData&:
   _WRAP_SIGNAL(void selection_get(GtkSelectionData* selection_data, guint info, guint time), "selection_get")
-  _WRAP_SIGNAL(void selection_received(GtkSelectionData* selection_data, guint time), "selection_received")
+  _WRAP_SIGNAL(void selection_received(const SelectionData& selection_data, guint time), "selection_received")
 
   _WRAP_SIGNAL(void drag_begin(const Glib::RefPtr<Gdk::DragContext>& context), "drag_begin")
   _WRAP_SIGNAL(void drag_end(const Glib::RefPtr<Gdk::DragContext>& context), "drag_end")
@@ -507,7 +507,7 @@ dnl
   _WRAP_SIGNAL(void drag_leave(const Glib::RefPtr<Gdk::DragContext>& context, guint time), "drag_leave")
   _WRAP_SIGNAL(bool drag_motion(const Glib::RefPtr<Gdk::DragContext>& context, int x, int y, guint time), "drag_motion")
   _WRAP_SIGNAL(bool drag_drop(const Glib::RefPtr<Gdk::DragContext>& context, int x, int y, guint time), "drag_drop")
-  _WRAP_SIGNAL(void drag_data_received(const Glib::RefPtr<Gdk::DragContext>& context, int x, int y, GtkSelectionData* selection_data, guint info, guint time), "drag_data_received")
+  _WRAP_SIGNAL(void drag_data_received(const Glib::RefPtr<Gdk::DragContext>& context, int x, int y, const SelectionData& selection_data, guint info, guint time), "drag_data_received")
 
   //Keybinding signals:
   _IGNORE_SIGNAL("popup_menu")
