@@ -1,3 +1,7 @@
+2003-01-23  Murray Cumming  <murrayc@usa.net>
+
+	* More use of Gdk::Device and Gtk::SelectionData.
+
 2003-01-22  Murray Cumming  <murrayc@usa.net>
 
 	* Used _IGNORE_SIGNAL() on keybinding signals, though gmmproc still
